<resources>
    <string name="app_name">Catbooru</string>
    <string name="head_profile_manage">管理Booru网站</string>
    <string name="preview">预览</string>
    <string name="quickSearch">快速搜索</string>

    <string name="tag">tag</string>
    <string name="info">信息</string>
    <string name="download">下载</string>
    <string name="openInBrowser">浏览器打开</string>
    <string name="share">分享</string>
    <string name="pressBackAgain">再按一次返回键退出</string>

    <string name="add">添加</string>
    <string name="save">保存</string>
    <string name="error">错误</string>
    <string name="menuCopy">复制</string>
    <string name="yes">确定</string>
    <string name="cancel">取消</string>

    <string name="exceptionManger">错误信息</string>
    <string name="addBooru">添加Booru</string>
    <string name="booruManager">Booru管理</string>
    <string name="saveSucceeded">保存成功</string>


    <string name="booruName">Booru名称</string>
    <string name="booruType">协议类型</string>
    <string name="booruHost">主机地址</string>
    <string name="booruHostSummary">包括"http://", 只填写前面那一串</string>
    <string name="booruTypeSummary">通常可以在api界面找到</string>
    <string name="booruHostNotHttp">网址必须由http://或https://开头</string>


    <string name="title_activity_settings">SettingsActivity</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="loading">Loading</string>
    <string name="sample">sample</string>
    <string name="retry">重试</string>
</resources>