<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <PreferenceCategory
        app:title="添加Booru">
        <EditTextPreference
            android:defaultValue="Default value"
            android:key="edit_text_preference_1"
            android:selectAllOnFocus="true"
            android:singleLine="true"
            android:title="@string/booruName" />

        <EditTextPreference
            android:defaultValue="Default value"
            android:key="edit_text_preference_1"
            android:selectAllOnFocus="true"
            android:singleLine="true"
            android:title="@string/booruHost"
            android:summary="@string/booruHostSummary"/>

        <ListPreference
            android:key="list_preference"
            android:title="@string/booruType"
            android:summary="@string/booruTypeSummary"
            android:entries="@array/booruType"
            android:entryValues="@array/booruTypeValue"
            android:dialogTitle="Type"/>
    </PreferenceCategory>
</PreferenceScreen>